# dot_escrow

./: .env.example  .gitignore  INK_V6_MIGRATION_CHECKLIST.md  INK_V6_RESEARCH_FINDINGS.md  LICENSE  PASEO_DEPLOYMENT.md  PRE_AUDIT_CHECKLIST.md  README.md  get_address.js  package-lock.json
.github/: pull_request_template.md
.github/workflows/: ci.yml
audit-submission/: FINAL_COVERAGE_REPORT.txt  README_AUDIT.md
audit-submission/docs/: API-REFERENCE.md  ARCHITECTURE.md  AUDIT_SCOPE.md  KNOWN_ISSUES.md  SECURITY_REVIEW.md  TESTING_GUIDE.md  THREAT_MODEL.md
audit-submission/src/: lib.rs
backend/: README.md  docker-compose.yml  env.example  go.mod  go.sum
backend/cmd/: main.go
backend/internal/api/: handlers.go  routes.go
backend/internal/blockchain/: client.go
backend/internal/config/: config.go
backend/internal/database/: database.go
backend/internal/middleware/: middleware.go
backend/internal/models/: dispute.go  escrow.go  milestone.go
contracts/: Cargo.toml  cobertura.xml
contracts/escrow/: Cargo.toml  unit_tests.rs
contracts/escrow/src/: lib.rs  lib.rs.bak  lib_fixed.rs
contracts/fuzz/: Cargo.toml
contracts/lib/: Cargo.toml
contracts/lib/src/: lib.rs
contracts/psp22_token/: Cargo.toml  lib.rs
docs/: API-REFERENCE.md  DEPLOYMENT_CONFIGURATION.md  FRONTEND_CONTRACT_INTEGRATION.md  GO_TO_MARKET_STRATEGY.md  MILESTONE_2_ARTICLE.md  TESTING_GUIDE.md  USER_GUIDE.md  project_details.md
frontend/: .eslintrc.cjs  FE_TESTING_GUIDE.md  SMART_CONTRACT_COMPATIBILITY_FIXES.md  SMART_CONTRACT_MIGRATION.md  db.json  package-lock.json  package.json  test-contract.cjs  tsconfig.build.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/AdminRoute/: AdminRoute.tsx
frontend/src/components/Card/: EscrowCard.tsx  StatCard.tsx
frontend/src/components/CommentComponent/: CommentSection.tsx
frontend/src/components/CountDownTiming/: CountDown.tsx
frontend/src/components/Header/: index.tsx
frontend/src/components/Layout/: index.tsx
frontend/src/components/Modal/: CancelEscrowModal.tsx  CompleteMilestoneModal.tsx  DisputeMilestoneModal.tsx  PolkadotWalletModal.tsx  ReleaseMilestoneModal.tsx
frontend/src/components/Notifications/: index.tsx
frontend/src/components/OnboardingTour/: index.tsx
frontend/src/components/PSP22StableCoinBalance/: PSP22StablecoinApproval.tsx  PSP22StablecoinBalance.tsx
frontend/src/components/SearchBar/: index.tsx
frontend/src/components/SearchFilters/: index.tsx
frontend/src/components/Sidebar/: index.tsx
frontend/src/components/USDT/: USDTApproval.tsx  USDTBalance.tsx
frontend/src/components/WelcomeGuide/: index.tsx
frontend/src/contractABI/: EscrowABI.json  EscrowABI.ts  PSP22ABI.ts  PSP22Token.json  TokenABI.json
frontend/src/hooks/: useAdminGovernance.ts  useComments.ts  useDummyEscrowContract.ts  useEscrowAdmin.ts  useEscrowContract.ts  usePSP22StablecoinContract.ts  usePolkadotApi.ts  usePolkadotExtension.ts  useTokenDistribution.ts  useUSDTContract.ts  useWalletContext.tsx
frontend/src/pages/Admin/: index.tsx
frontend/src/pages/Admin/sections/: ActionQueue.tsx  AuditTrail.tsx  KeyManagement.tsx  Overview.tsx
frontend/src/pages/Analytics/: index.tsx
frontend/src/pages/ConfirmEscrow/: index.tsx
frontend/src/pages/ConnectWallet/: index.tsx
frontend/src/pages/CreateEscrow/: index.tsx
frontend/src/pages/CreateEscrow/steps/: BasicDetails.tsx  CounterpartyDetails.tsx  MilestoneDetails.tsx  ReviewDetails.tsx
frontend/src/pages/Dashboard/: index.tsx
frontend/src/pages/DisputeResolution/: index.tsx
frontend/src/pages/EscrowDetails/: index.tsx
frontend/src/pages/Help/: index.tsx
frontend/src/pages/MilestoneDetails/: MilestoneDetail.tsx
frontend/src/pages/MilestoneTracking/: index.tsx
frontend/src/pages/Search/: index.tsx
frontend/src/pages/Settings/: index.tsx
frontend/src/pages/Transactions/: index.tsx
frontend/src/store/: index.ts
frontend/src/store/slices/: escrowSlice.ts  uiSlice.ts  walletSlice.ts
frontend/src/styles/: index.css  theme.ts
frontend/src/test/: setup.ts  utils.tsx
frontend/src/test/components/: SearchBar.test.tsx  SearchFilters.test.tsx  WelcomeGuide.test.tsx
frontend/src/test/components/Modal/: CancelEscrowModal.test.tsx  CompleteMilestoneModal.test.tsx  DisputeMilestoneModal.test.tsx  ReleaseMilestoneModal.test.tsx
frontend/src/test/hooks/: useEscrowContract.test.ts
frontend/src/test/pages/: ConnectWallet.test.tsx  CreateEscrow.test.tsx  Dashboard.test.tsx  DisputeResolution.test.tsx  EscrowDetails.test.tsx  Help.test.tsx  MilestoneTracking.test.tsx  Search.test.tsx  Transactions.test.tsx
frontend/src/test/utils/: escrowContractUtils.test.ts
frontend/src/utils/: addressConversion.ts  contractAdminUtils.ts  escrowContractUtils.ts  polkadotValidator.ts  substrateToH160.ts
internal/api/: handlers.go
internal/models/: escrow.go  milestone.go
internal/repository/: dispute_repository.go  escrow_repository.go  factory.go  interfaces.go  milestone_repository.go  release_condition_repository.go  transaction.go
json-api/: cors.js  db.json  package-lock.json  package.json
landing_page/: index.html  package-lock.json  package.json
landing_page/src/: App.tsx  main.tsx
landing_page/src/landingPage/: index.tsx
landing_page/src/landingPage/components/: AboutSection.tsx  Footer.tsx  Header.tsx  HeroSection.tsx  HowItWorks.tsx  WaitlistSection.tsx
landing_page/src/styles/: theme.ts
token/token_distribution/: Cargo.toml  lib.rs
token_distribution_new/: .gitignore  Cargo.toml
token_distribution_new/src/: lib.rs
token_faucet/token/: Cargo.toml  lib.rs
