[workspace]
members = [
    "escrow",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Samuel Arogbonlo <sbayo971@gmail.com>"]
edition = "2021"
repository = "https://github.com/samuelarogbonlo/.escrow"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
ink = { version = "5.0.0", default-features = false }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.9", default-features = false, features = ["derive"] }

[profile.release]
overflow-checks = false 