[workspace]
members = [
    "escrow",
    "psp22_token",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Samuel Arogbonlo <sbayo971@gmail.com>"]
edition = "2021"
repository = "https://github.com/samuelarogbonlo/.escrow"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
ink = { version = "6.0.0-beta", default-features = false }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.6", default-features = false, features = ["derive"] }

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
overflow-checks = false