[package]
name = "escrow-contract"
version = "0.1.0"
authors = ["Samuel Arogbonlo <sbayo971@gmail.com>"]
edition = "2021"

[dependencies]
ink = { version = "6.0.0-alpha", default-features = false, features = ["unstable-hostfn"] }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.6", default-features = false, features = ["derive"], optional = true }

[lib]
path = "src/lib.rs"

[lints.rust]
unexpected_cfgs = "allow"

[profile.release]
opt-level = "z"       # Optimize for size (maximum)
lto = "fat"           # Fat Link Time Optimization (most aggressive)
codegen-units = 1     # Better optimization (no parallelization for smaller size)
# strip = "symbols"   # Disabled: conflicts with PolkaVM --emit-relocs
panic = "abort"       # Smaller panic handling
overflow-checks = false  # Disable overflow checks for smaller size

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
]
ink-as-dependency = []

[dev-dependencies]
ink_e2e = "6.0.0-alpha"
