[package]
name = "escrow-contract"
version = "0.1.0"
authors = ["Samuel Arogbonlo <sbayo971@gmail.com>"]
edition = "2021"

[dependencies]
ink = { version = "6.0.0-beta", default-features = false }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.11", default-features = false, features = ["derive"], optional = true }

[lib]
path = "src/lib.rs"

[package.metadata.contract]
target = "polkavm"

[lints.rust]
unexpected_cfgs = "allow"

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
overflow-checks = false

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
]
ink-as-dependency = []
e2e-tests = []

[dev-dependencies]
ink_e2e = "6.0.0-beta"