[package]
name = "escrow_lib"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ink = { workspace = true }
scale = { workspace = true }
scale-info = { workspace = true }
openbrush = { workspace = true }

[lib]
path = "src/lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "openbrush/std",
] 